infra/k8s/development/ticketing-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ticketing-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ticketing
  template:
    metadata:
      labels:
        app: ticketing
    spec:
      containers:
        - name: ticketing
          image: staffofhades/ticketing:dev-latest
---
apiVersion: v1
kind: Service
metadata:
  name: ticketing-clusterip-srv
spec:
  selector:
    app: ticketing
  ports:
    - name: authentication-service-clusterip
      protocol: TCP
      port: 3000
      targetPort: 3000
    - name: ticketing-clusterip
      protocol: TCP
      port: 4200
      targetPort: 4200
    - name: tickets-service-clusterip
      protocol: TCP
      port: 3333
      targetPort: 3333
