infra/k8s/development/ingress-srv.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
  name: ingress-services-srv
spec:
  ingressClassName: nginx
  rules:
    - host: ticketing.dev
      http:
        paths:
          - path: /authentication-service(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: ticketing-clusterip-srv
                port:
                  number: 3000
          - path: /tickets-service(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: ticketing-clusterip-srv
                port:
                  number: 3333
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-ticketing-srv
  annotations:
    nginx.ingress.kubernetes.io/use-regex: 'true'
spec:
  ingressClassName: nginx
  rules:
    - host: ticketing.dev
      http:
        paths:
          - path: /?(.*)
            pathType: Prefix
            backend:
              service:
                name: ticketing-clusterip-srv
                port:
                  number: 4200
#---
#apiVersion: v1
#kind: Service
#metadata:
#  name: ingress-nginx-controller
#  namespace: ingress-nginx
#spec:
#  type: ExternalName
#  externalName: ingress
